--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">landmark-voice-navigator</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">みかしーオワタ(´；ω；`)</string>
+    <string name="button_speak">speak!</string>
 
 </resources>
